Refactor codebase using IntelliJ